fix nav bar right gap

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -25,6 +25,7 @@
   .nav-bar {
     background-color: $color !important;
     position: static;
+    width: 100%;
   }
 }
 
